--- a/style.css
+++ b/style.css
@@ -1,26 +1,34 @@
-#myBar {
-  width: 1%;
-  height: 30px;
+#by10 {
+  height: 40px;
+  width: 100px;
+  background-color: rgb(172, 204, 197);
+  cursor: pointer;
+  border: none;
+  color: rgb(158, 22, 22);
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition-duration: 0.6s;
+}
+
+
+#by10:hover {
   background-color: #4CAF50;
-  text-align: center; 
-  line-height: 30px; 
   color: white;
 }
 
-#myBar3 {
-  width: 3%;
-  height: 30px;
-  background-color: #4CAF50;
-  text-align: center; 
-  line-height: 30px; 
-  color: white;
+
+#barHolder {
+  background-color: black;
+  width: 100%;
+  height: 80px;
 }
 
-#myBar7 {
-  width: 7%;
-  height: 30px;
-  background-color: #4CAF50;
-  text-align: center; 
-  line-height: 30px; 
-  color: white;
+#bar {
+  background-color:  rgb(158, 22, 22);
+  width: 0%;
+  height: 80px;
+  transition: width 2s;
 }
